fix scroll on mobile menu

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,6 +1,10 @@
 .header {
-   position: relative;
-   background: var(--black);
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 100%;
+   z-index: 10;
+   background: transparent;
    color: var(--white);
    display: flex;
    align-items: center;
@@ -49,7 +53,7 @@
 .headerRightMobile {
    display: flex;
    align-items: center;
-   gap: 12px;
+   gap: 20px;
 }
 
 .burger {
@@ -61,7 +65,6 @@
    border: none;
    cursor: pointer;
    width: 30px;
-   height: 40px;
    padding: 0;
    position: relative;
    z-index: 110;
@@ -106,7 +109,6 @@
    text-transform: uppercase;
    padding: 32px 16px;
    z-index: 100;
-   overflow-y: auto;
    max-height: 100vh;
    transform: translateY(-100%);
    transition: transform 0.5s ease-in-out;
@@ -116,10 +118,12 @@
    transform: translateY(0);
 }
 
-.logoMobile {
-   width: 131px;
-   height: 22px;
-   object-fit: cover;
+.logoMobileVersion {
+   display: block;
+}
+
+.logoDesktopVersion {
+   display: none;
 }
 
 .menuList {
@@ -159,6 +163,14 @@
 }
 
 @media (min-width: 1024px) {
+   .logoMobileVersion {
+      display: none;
+   }
+
+   .logoDesktopVersion {
+      display: block;
+   }
+
    .navDesktop {
       display: block;
    }
